# rs_snake_game

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml  job-logs2.txt  plan-dist.json
.codex/: prompt.md
docs/: demo-relaxed-innovative-modes.md
errors/: job-logs.txt  job-logs3.txt  job-logs4.txt
openspec/changes/add-pointer-idle-pause/: design.md  proposal.md  tasks.md
openspec/changes/add-pointer-idle-pause/specs/gui-runtime-and-navigation/: spec.md
openspec/changes/archive/2026-02-12-demo-relaxed-innovative-modes/specs/experimental-tool-loadout/: spec.md
openspec/changes/archive/2026-02-12-demo-relaxed-innovative-modes/specs/gui-runtime-and-navigation/: spec.md
openspec/changes/archive/2026-02-15-add-pointer-idle-pause/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/demo-relaxed-innovative-modes/: design.md  proposal.md  tasks.md
openspec/changes/demo-relaxed-innovative-modes/specs/experimental-tool-loadout/: spec.md
openspec/changes/fix-ci-release-workflow/: design.md  proposal.md  release.yml.backup  tasks.md
openspec/changes/reduce-game-difficulty/: design.md  proposal.md  tasks.md
openspec/changes/reduce-game-difficulty/specs/difficulty-adjustments/: spec.md
openspec/specs/ci-release-fix/: spec.md
openspec/specs/experimental-tool-loadout/: spec.md
openspec/specs/gui-runtime-and-navigation/: spec.md
openspec/specs/invincible-length-progression/: spec.md
openspec/specs/leaderboard-segmentation/: spec.md
openspec/specs/mode-system-and-rules/: spec.md
src/: gui.rs  lib.rs  main.rs
(+5 files in other folders)
